jest.useFakeTimers();
import { shallow } from "enzyme";
import * as React from "react";
import "react-native";
import WorldUnity from "../world-2-unity";

describe("WorldUnity2", () => {
    it("should render", () => {
        const actual = shallow(<WorldUnity onSkip={jest.fn()} />);

        expect(actual).toMatchSnapshot();
    });

    it("should render next set of heading & subheading", () => {
        const actual = shallow(<WorldUnity onSkip={jest.fn()} />);

        actual.setState({
            textIndex: 1
        });

        expect(actual).toMatchSnapshot();
    });
});
