// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorldUnity2 should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World2Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <SafeAreaView
          style={
            Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/unity/unity-2.png",
              }
            }
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />
        </SafeAreaView>
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            you've reached the 2nd yunity!
          </YuText>
          <YuText
            bold={false}
            style={
              Object {
                "fontSize": 14,
                "marginTop": 16,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            that means you've unlocked the desert world
          </YuText>
        </AnimatedComponent>
      </SafeAreaView>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 2nd yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've unlocked the desert world
            </YuText>
          </AnimatedComponent>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />,
            "style": Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/unity/unity-2.png",
              },
              "style": Object {
                "height": 1334,
                "width": 750,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 2nd yunity!
              </YuText>,
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've unlocked the desert world
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you've reached the 2nd yunity!",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you've reached the 2nd yunity!",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": false,
                "children": "that means you've unlocked the desert world",
                "style": Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "that means you've unlocked the desert world",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SafeAreaView
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 2nd yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've unlocked the desert world
            </YuText>
          </AnimatedComponent>
        </SafeAreaView>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <SafeAreaView
              style={
                Object {
                  "backgroundColor": "rgb(255,255,255)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-2.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />
            </SafeAreaView>,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 2nd yunity!
              </YuText>
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've unlocked the desert world
              </YuText>
            </AnimatedComponent>,
          ],
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-2.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />,
              "style": Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "cover",
                "source": Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                },
                "style": Object {
                  "height": 1334,
                  "width": 750,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  you've reached the 2nd yunity!
                </YuText>,
                <YuText
                  bold={false}
                  style={
                    Object {
                      "fontSize": 14,
                      "marginTop": 16,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  that means you've unlocked the desert world
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you've reached the 2nd yunity!",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you've reached the 2nd yunity!",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": false,
                  "children": "that means you've unlocked the desert world",
                  "style": Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "that means you've unlocked the desert world",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`WorldUnity2 should render next set of heading & subheading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World2Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <SafeAreaView
          style={
            Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/unity/unity-2.png",
              }
            }
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />
        </SafeAreaView>
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!
          </YuText>
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            
          </YuText>
        </AnimatedComponent>
      </SafeAreaView>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!
            </YuText>
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              
            </YuText>
          </AnimatedComponent>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />,
            "style": Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/unity/unity-2.png",
              },
              "style": Object {
                "height": 1334,
                "width": 750,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!
              </YuText>,
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SafeAreaView
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!
            </YuText>
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              
            </YuText>
          </AnimatedComponent>
        </SafeAreaView>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <SafeAreaView
              style={
                Object {
                  "backgroundColor": "rgb(255,255,255)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-2.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />
            </SafeAreaView>,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!
              </YuText>
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                
              </YuText>
            </AnimatedComponent>,
          ],
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-2.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />,
              "style": Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "cover",
                "source": Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                },
                "style": Object {
                  "height": 1334,
                  "width": 750,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!
                </YuText>,
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you've invested in yourself and the new world is rewarding you - now you can take 3 challenges a day!",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
